discussion/kv_engine/171274/171274_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge commit 'bfa0dd847' into master

* commit 'bfa0dd847':
  MB-50874: Reset snap start if less than lastSeqno on new checkpoint creation

Change-Id: I0f0b71213559bdaa6d92a4a5ead3ea7fbe7aa41b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2022-02-23 17:44:25.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-23 17:48:52.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15751/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_config.h:73:9: error: use of undeclared identifier "keepClosedCheckpoints" [clang-diagnostic-error]
        keepClosedCheckpoints = value;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:1415:17: error: use of undeclared identifier "vbucketId" [clang-diagnostic-error]
                vbucketId,
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:578:12: error: class member cannot be redeclared [clang-diagnostic-error]
    size_t getNumCheckpoints() const;
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:355:12: note: previous declaration is here
    size_t getNumCheckpoints() const;
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15751/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_config.h:73:9:
error: use of undeclared identifier "keepClosedCheckpoints" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15751/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44122/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\checkpoint_config.h(73): error C2065: "keepClosedCheckpoints": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44122/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37171/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_config.h:73:9:
error: use of undeclared identifier "keepClosedCheckpoints"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37171/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16568/ : FAILURE

Compile error at [2022-02-23T17:46:40.126Z] ../kv_engine/engines/ep/src/checkpoint_manager.h:578:12:
error: class member cannot be redeclared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16568/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5401/ : FAILURE

Compile error at [2022-02-23T17:46:36.276Z] ../kv_engine/engines/ep/src/checkpoint_manager.h:578:12:
error: class member cannot be redeclared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5401/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17506/ : FAILURE

Compile error at [2022-02-23T17:45:52.847Z] ../kv_engine/engines/ep/src/checkpoint_config.h:73:9:
error: ?keepClosedCheckpoints? was not declared in this scope; did you mean ?allowKeepClosedCheckpoints??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17506/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5460/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17835/ : FAILURE

Compile error at [2022-02-23T17:46:12.366Z] ../kv_engine/engines/ep/src/checkpoint_manager.h:578:12:
error: ?size_t CheckpointManager::getNumCheckpoints() const? cannot be overloaded with ?size_t CheckpointManager::getNumCheckpoints() const?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17835/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18542/ : FAILURE

Compile error at [2022-02-23T17:45:35.682Z] ../kv_engine/engines/ep/src/checkpoint_manager.h:578:12:
error: class member cannot be redeclared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18542/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25909/ : FAILURE

Compile error at [2022-02-23T17:45:51.465Z] ../kv_engine/engines/ep/src/checkpoint_manager.h:578:12:
error: class member cannot be redeclared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25909/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14598/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2022-02-24 08:56:25.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
